Corrected text centering on mobile devices for page footer

--- a/src/components/copyrightFooter.css
+++ b/src/components/copyrightFooter.css
@@ -5,4 +5,5 @@
     grid-row: "footer";
     justify-content: center;
     margin-bottom: 2rem;
+    text-align: center;
 }
